# bluechi

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .packit.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile.am  Makefile.skipper  README  README.developer.md  README.maintainer.md  README.md  SECURITY.md  bluechi.spec.in  client.c  configure.ac  hirte.spec.in  meson.build  meson_options.txt  node.c  orch.c  orch.h  requirements.txt  run-lint-fix.sh  run-lint.sh  run-tests.sh  setup.cfg  skipper.yaml  types.c  types.h
.copr/: Makefile
binchihua/: meson.build
config/: hirte-agent.conf  hirte-default.conf  hirte.conf  meson.build
config/agent/: agent.conf  hirte-default.conf
config/agent.conf.d/: README.md
config/bluechi/: bluechi.conf
config/bluechi.conf.d/: README.md
config/controller/: controller.conf
config/controller.conf.d/: README.md
config/hirte/: hirte-default.conf  hirte.conf
config/hirte.conf.d/: README.md
config/tmpfile/: bluechi.conf
data/: io.github.eclipse-bluechi.bluechi.Agent.Metrics.xml  io.github.eclipse-bluechi.bluechi.Agent.conf.in  io.github.eclipse-bluechi.bluechi.Agent.xml  io.github.eclipse-bluechi.bluechi.Job.xml  io.github.eclipse-bluechi.bluechi.Manager.xml  io.github.eclipse-bluechi.bluechi.Metrics.xml  io.github.eclipse-bluechi.bluechi.Monitor.xml  io.github.eclipse-bluechi.bluechi.Node.xml  io.github.eclipse-bluechi.bluechi.conf.in  io.github.eclipse-bluechi.bluechi.internal.Agent.xml  io.github.eclipse-bluechi.bluechi.internal.Manager.xml  io.github.eclipse-bluechi.bluechi.internal.Proxy.xml  meson.build  org.container.hirte.Agent.conf.in  org.containers.hirte.Agent.conf.in  org.containers.hirte.Agent.xml  org.containers.hirte.Job.xml  org.containers.hirte.Manager.xml  org.containers.hirte.Metrics.xml  org.containers.hirte.Monitor.xml  org.containers.hirte.Node.xml  org.containers.hirte.conf.in  org.containers.hirte.internal.Agent.Metrics.xml  org.containers.hirte.internal.Agent.xml  org.containers.hirte.internal.Manager.xml  org.containers.hirte.internal.Proxy.xml  org.eclipse.bluechi.Agent.Metrics.xml  org.eclipse.bluechi.Agent.conf.in  org.eclipse.bluechi.Agent.xml  org.eclipse.bluechi.Controller.xml  org.eclipse.bluechi.Job.xml  org.eclipse.bluechi.Manager.xml  org.eclipse.bluechi.Metrics.xml  org.eclipse.bluechi.Monitor.xml  org.eclipse.bluechi.Node.xml  org.eclipse.bluechi.conf.in  org.eclipse.bluechi.internal.Agent.Metrics.xml  org.eclipse.bluechi.internal.Agent.xml  org.eclipse.bluechi.internal.Controller.xml  org.eclipse.bluechi.internal.Manager.xml  (+1 more)
doc/man/: bluechi-agent-selinux.8.md  bluechi-agent.1.md  bluechi-agent.conf.5.md  bluechi-controller.1.md  bluechi-controller.conf.5.md  bluechi-controller.selinux.8.md  bluechi-is-online.1.md  bluechi-proxy.1.md  bluechi.1.md  bluechi.conf.5.md  bluechictl.1.md  hirte-agent.1.md  hirte-agent.conf.5.md  hirte-proxy.1.md  hirte.1.md  hirte.conf.5.md  hirtectl.1.md  meson.build
libchihua-msg/: meson.build
libchihua-msg/include/: node.h  orchestrator.h  peer-bus.h
libchihua-msg/src/: node.c  orchestrator.c  peer-bus.c
libhirte/: meson.build
libhirte/include/: job-manager.h  node.h  orchestrator.h  socket.h
libhirte/src/: job-manager.c  node.c  node.h  orchestrator.c  orchestrator.h  socket.c
libhirte/test/: meson.build
man/: hirte-agent-config.xml  hirte-agent.conf.5.md  hirte-agent.xml  hirte-config.xml  hirte-docs.xml.in  hirte.1.md  hirte.conf.5.md  hirte.xml  hirtectl.xml  meson.build
rpm/: build-srpm.sh  hirte.spec.in  meson.build
selinux/: .gitignore  Makefile  bluechi.fc  bluechi.if  bluechi.te  bluechi_agent_selinux.8  bluechi_controller_selinux.8  bluechi_selinux.8  build-selinux.sh  hirte.fc  hirte.if  hirte.te  hirte_agent_selinux.8  hirte_selinux.8  meson.build
src/agent/: agent.c  agent.h  main.c  meson.build  proxy.c  proxy.h  types.h
src/client/: Makefile.am  client.c  client.h  main.c  meson.build  method-daemon-reload.c  method-daemon-reload.h  method-default-target.c  method-default-target.h  method-enable-disable.c  method-enable-disable.h  method-freeze-thaw.c  method-freeze-thaw.h  method-help.c  method-help.h  method-is-enabled.c  method-is-enabled.h  method-kill.c  method-kill.h  method-list-unit-files.c  method-list-unit-files.h  method-list-units.c  method-list-units.h  method-loglevel.c  method-loglevel.h  method-metrics.c  method-metrics.h  method-monitor.c  method-monitor.h  method-reset-failed.c  method-reset-failed.h  method-status.c  method-status.h  method-unit-actions.c  method-unit-actions.h  method-unit-lifecycle.c  method-unit-lifecycle.h  method_list_units.c  method_list_units.h  method_monitor.c  (+8 more)
src/controller/: controller.c  controller.h  job.c  job.h  main.c  meson.build  metrics.c  metrics.h  monitor.c  monitor.h  node.c  node.h  proxy_monitor.c  proxy_monitor.h  types.h
src/is-online/: help.c  help.h  is-online.c  is-online.h  main.c  meson.build  opt.h
src/libbluechi/: meson.build  socket.c  socket.h
src/libchihua-msg/: meson.build  node.c  node.h  orchestrator.c  orchestrator.h
src/libhirte/: meson.build  socket.c  socket.h
src/manager/: job.c  job.h  main.c  manager.c  manager.h  meson.build  metrics.c  metrics.h  monitor.c  monitor.h  node.c  node.h  proxy_monitor.c  proxy_monitor.h  types.h
src/orch/: Makefile.am  controller.c  controller.h  main.c  managednode.c  managednode.h  manager.c  manager.h  meson.build  node.c  opt.c  opt.h  orch.c  orchestrator.c  orchestrator.h  peer-manager.c  peer-manager.h  types.h
src/proxy/: main.c  meson.build
src/python/: README.md  __init__.py  config.py  requirements.txt  setup.cfg  setup.py
systemd-units/: bluechi-agent-user.service  bluechi-agent.service  bluechi-controller.service  bluechi-controller.socket  bluechi-controller.socket.in  bluechi-dep@.service  bluechi-proxy-user@.service  bluechi-proxy@.service  bluechi.service  bluechi.socket  hirte-agent-user.service  hirte-agent.service  hirte-dep@.service  hirte-proxy-user@.service  hirte-proxy@.service  hirte.service  hirte.socket  meson.build
(+952 files in other folders)
